--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,13 +9,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check Out Code
-        uses: actions/checkout@v3
+      - name: Code checkout
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
+      - name: Set up go
+        uses: actions/setup-go@v5
         with:
           go-version: '1.22.1'  # Specify your Go version
 
