--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,15 +6,33 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  lint:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check Out Code
-        uses: actions/checkout@v3
+      - name: Code checkout
+        uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
+      - name: Set up go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.22.1'  # Specify your Go version
+
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.60
+          args: --timeout 5m
+
+  tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Code checkout
+        uses: actions/checkout@v4
+
+      - name: Set up go
+        uses: actions/setup-go@v5
         with:
           go-version: '1.22.1'  # Specify your Go version
 
